<resources>
    <string name="app_name">Appointment Book</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="use_appointmentbook_app">Use AppointmentBook App</string>
    <string name="help">Help</string>
    <string name="welcome_to_the_android_appointmentbook_app">Welcome to The Android AppointmentBook App</string>
    <string name="make_appointment">Make Appointment</string>
    <string name="view_appointments">View Appointments</string>
    <string name="search_appointments">Search Appointments</string>
    <string name="delete_appointments">Delete Appointments</string>
    <string name="help_menu">Help Menu</string>
    <string name="readMe">
        Welcome to the AppointmentBook App! To use this app, use the back button to go back to the main menu, Then push the Use AppointmentBook App button. There, you will see some options.
        The first option is to make an appointment. Using this, the app will check if there is an appointmentbook already made for the given owner and add the appointment to that book. Otherwise, it creates a new book.
        The next option is to view all appointments from a given owner. The next option is to search an for appointments between two given times from a gievn owner.
    </string>
    <string name="owner">Owner</string>
    <string name="type_owner_name_here">type owner name here</string>
    <string name="type_description_here">type description here</string>
    <string name="description">Description</string>
    <string name="start_date">Start Date</string>
    <string name="enter_start_date">enter start date (mm/dd/yyyy hh/MM am/pm</string>
    <string name="enter_end_date">enter end date (mm/dd/yyyy hh/MM am/pm</string>
    <string name="end_date">End Date</string>
    <string name="create_appointment">Create Appointment</string>
    <string name="type_the_owner_name">Type the Owner Name</string>
    <string name="all_done">All Done</string>
    <string name="search_appointmentbook">Search AppointmentBook</string>
</resources>